Fix nav items padding to not overlap logo

--- a/src/scss/Nav.scss
+++ b/src/scss/Nav.scss
@@ -53,7 +53,7 @@
         @include header-five;
 
         li {
-          padding: 0 3vw;
+          padding: 0 2.3vw;
         }
 
         a {
